added some method from personal ethereum api
